--- a/Franchise-Details.html
+++ b/Franchise-Details.html
@@ -3,9 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+ 
+    <style>
+        section{
+            background-color: #c43429;
+        }
+    </style>
+    <title>Franchise Details</title>
 </head>
 <body>
-    
+    <section>
+        <nav class="navbar navbar-expand-lg navbar-light bg-body-tertiary">
+          <!-- Container wrapper -->
+          <div class="container-fluid">
+            <!-- Toggle button -->
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+        
+            <!-- Collapsible wrapper -->
+            <div
+              class="collapse navbar-collapse justify-content-center"
+              id="navbarCenteredExample"
+            >
+              <!-- Left links -->
+              <ul class="navbar-nav mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link "  href="./index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./about.html">About</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="./Franchise-Details.html">Franchise Details</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Our support</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Benefits</a>
+                </li>
+              </ul>
+              <!-- Left links -->
+            </div>
+            <!-- Collapsible wrapper -->
+          </div>
+          <!-- Container wrapper -->
+        </nav>
+      </section>
 </body>
 </html>
