--- a/contact-us.html
+++ b/contact-us.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
@@ -19,7 +20,7 @@
         background-color: #c43429;
       }
     </style>
-    <title>Franchise Details</title>
+    <title>Contact Us</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -228,7 +229,7 @@
           <div class="contact-info">
             <h3 class="title">Let's get in touch</h3>
             <p class="text">
-              any doubt About Our Franchise Ask in Here oru contact
+              any doubt About Our Franchise Ask in Here or contact
             </p>
     
             <div class="info">
@@ -311,7 +312,7 @@ textarea {
 }
 
 .container {
-  position: absolute;
+  position: fixed;
   width: 100%;
   min-height: 100vh;
   padding: 2rem;
