--- a/contact-us.html
+++ b/contact-us.html
@@ -219,7 +219,7 @@
           </button>
 
           <button
-            onclick="window.location.href='contact-us.html' "
+            onclick="window.location.href='our-support.html' "
             type="button"
           >
             Our Support
@@ -230,7 +230,7 @@
             Benefits
           </button>
           <button
-          onclick="window.location.href='our-support.html' " class="active"
+          onclick="window.location.href='contact-us.html' " class="active"
           type="button"
         >
           Contact Us
